[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/Backgrounds/Menu background.png" type="Texture" id=2]
[ext_resource path="res://scenes/interface/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/interface/SaveLoad/LoadMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/interface/CreditsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/Music/s2-2.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/interface/Options/OptionsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/Ui/Styles/header_font_title.tres" type="DynamicFont" id=8]

[node name="Main menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
size_flags_horizontal = 15
size_flags_vertical = 15
size_flags_stretch_ratio = 128.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Label" parent="TextureRect"]
margin_left = 797.02
margin_top = 374.881
margin_right = 1863.02
margin_bottom = 707.881
rect_pivot_offset = Vector2( -938.427, 879.705 )
custom_fonts/font = ExtResource( 8 )
text = "tHAT DAY i GOT LOST IN AN ASTEROID fIELD"
align = 2
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 600
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu inner" type="CenterContainer" parent="HSplitContainer"]
margin_right = 750.0
margin_bottom = 1080.0

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/Menu inner"]
margin_left = 300.0
margin_top = 463.0
margin_right = 450.0
margin_bottom = 617.0
custom_constants/vseparation = 11

[node name="New game" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 22.0
Text = "new_game"
disabled = false

[node name="Quicktart" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 150.0
margin_bottom = 64.0
Text = "Level 2"
disabled = false

[node name="Quicktart2" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 150.0
margin_bottom = 97.0
Text = "Level 3"
disabled = false

[node name="Load game" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 150.0
margin_bottom = 55.0
Text = "load_game"
disabled = false

[node name="Options" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 150.0
margin_bottom = 88.0
Text = "options"
disabled = false

[node name="Playground" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 99.0
margin_right = 150.0
margin_bottom = 130.0
Text = "playground"
disabled = false

[node name="Credits" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 99.0
margin_right = 150.0
margin_bottom = 121.0
Text = "credits"
disabled = false

[node name="Exit" parent="HSplitContainer/Menu inner/GridContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 150.0
margin_bottom = 154.0
Text = "exit"
disabled = false

[node name="Control" type="Control" parent="HSplitContainer"]
margin_left = 750.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="RightMenus" type="MarginContainer" parent="HSplitContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadMenu" parent="HSplitContainer/Control/RightMenus" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1140.0
margin_bottom = 1040.0

[node name="CreditsMenu" parent="HSplitContainer/Control/RightMenus" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1140.0
margin_bottom = 1040.0

[node name="OptionsMenu" parent="HSplitContainer/Control/RightMenus" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1140.0
margin_bottom = 1040.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = 4.0
margin_bottom = 11.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackoutTween" type="Tween" parent="."]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/New game" to="." method="_on_New_game_pressed"]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/Quicktart" to="." method="_on_Quicktart_pressed"]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/Quicktart2" to="." method="_on_Quicktart2_pressed"]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/Load game" to="." method="_on_Load_game_pressed"]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/Playground" to="." method="_on_Playground_pressed"]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="HSplitContainer/Menu inner/GridContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="tween_all_completed" from="BlackoutTween" to="." method="_on_BlackoutTween_tween_all_completed"]
[connection signal="tween_step" from="BlackoutTween" to="." method="_on_BlackoutTween_tween_step"]
